deploy/k8s/00-namespace-secrets.example.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: messanger
